# robgoal

./: .gitignore  CLAUDE.md  HACKMD.md  LICENSE  Manifest.toml  Mini_project_meta_continual_learning.md  Project.toml  README.md  main.py  pyproject.toml  self_recurrent_neurons.bib
notebooks/: bad_id.ipynb  mnist.ipynb  pytorch-refresh.ipynb
src/: MNIST.py  robgoal.jl
